# bitcoin-market-pipeline

./: .gitignore  README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt  test_gx_connection.py
.github/workflows/: branch_deployments.yml  deploy.yml
bitcoin_dagster/: dagster_cloud.yaml  pyproject.toml
bitcoin_dagster/bitcoin_dagster/: __init__.py  assets.py  constants.py  dbt_assets.py  governance.py  gx_validation.py  jobs.py  partitions.py  resources.py  schedules.py  sensors.py  snowflake_security.sql  snowflake_utils.py
bitcoin_dagster/bitcoin_dagster/bitcoin_dbt/: profiles.yml
bitcoin_dagster/bitcoin_dagster/bitcoin_dbt/macros/: close_out_current_rows.sql
bitcoin_dagster/bitcoin_dagster/bitcoin_dbt/models/bronze/: raw_data.sql  schema.yaml
bitcoin_dagster/bitcoin_dagster/bitcoin_dbt/models/gold/: indicators.sql  mkt_cap.sql  scd2.sql  schema.yaml
bitcoin_dagster/bitcoin_dagster/bitcoin_dbt/models/silver/: schema.yaml  silver_crypto.sql
bitcoin_dagster/bitcoin_dbt/models/bronze/: incremental_raw.sql  sources.yaml
bitcoin_dagster/bitcoin_dbt/models/gold/: mkt_cap.sql
bitcoin_dagster/bitcoin_dbt/models/silver/: schema.yaml
bitcoin_dbt/: dbt_project.yml  requirements.txt
bitcoin_dbt/models/Bronze_layer/: schema.yaml
bitcoin_dbt/models/Gold/: scd2.sql  trading_signals.sql
bitcoin_dbt/models/bronze/: schema.yaml
bitcoin_dbt/models/silver/: candles.sql
crypto_pipeline/: __init__.py  assets.py  dbt_assets.py  definitions.py  jobs.py  resources.py  schedules.py
monitoring/: docker-compose.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
