[tool.dagster]
module_name = "crypto_pipeline.definitions"
definitions_module = "crypto_pipeline.definitions"
code_location_name = "crypto_pipeline"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_pipeline"
version = "0.1.0"
dependencies = []

[tool.setuptools]
packages = ["crypto_pipeline"]

