[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitcoin_dagster"
version = "0.1.2"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "dagster-snowflake",
    "dagster-aws",
    "dbt-snowflake",
    "boto3",
    "s3fs",
    "pandas",
    "pyarrow",
    "requests",
]

[tool.dagster]
module_name = "bitcoin_dagster"

[tool.hatch.build.targets.wheel]
packages = ["bitcoin_dagster"]
include = [
    "bitcoin_dagster/**/*.py",
    "bitcoin_dagster/**/profiles.yml",
    "bitcoin_dagster/**/dbt_project.yml",
    "bitcoin_dagster/**/models/**",
    "bitcoin_dagster/**/macros/**",
    "bitcoin_dagster/**/seeds/**",
    "bitcoin_dagster/**/snapshots/**",
    "bitcoin_dagster/**/tests/**",
]
