[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitcoin_dagster"
version = "0.1.3"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "dagster-snowflake",
    "dagster-aws",
    "dbt-snowflake",
    "boto3",
    "s3fs",
    "pandas",
    "pyarrow",
    "requests",
    "prometheus_client",
    "great_expectations",
    "snowflake-sqlalchemy",
]

[tool.dagster]
module_name = "bitcoin_dagster"

[tool.hatch.build.targets.wheel]
packages = ["bitcoin_dagster"]

[tool.hatch.build]
artifacts = [
    "bitcoin_dagster/bitcoin_dbt/**",
]
